# html_to_pdf

./: .typos.toml  Cargo.toml  README.md
dotnet_cli/: Cargo.toml
dotnet_cli/src/: helper_macros.rs  lib.rs
examples/html_to_pdf-cli/: Cargo.toml
examples/html_to_pdf-cli/src/: main.rs
html_to_pdf/: Cargo.toml
html_to_pdf/src/: lib.rs
html_to_pdf_adapter_chromiumoxide/: Cargo.toml
html_to_pdf_adapter_chromiumoxide/src/: lib.rs
html_to_pdf_adapter_dotnet_framework_itext/: Cargo.toml  build.rs
html_to_pdf_adapter_dotnet_framework_itext/HtmlToPdf_Framework/: HtmlToPdf_Framework.csproj  HtmlToPdf_Framework.sln  Program.cs  Readme.md
html_to_pdf_adapter_dotnet_framework_itext/HtmlToPdf_Framework/Properties/: AssemblyInfo.cs
html_to_pdf_adapter_dotnet_framework_itext/src/: lib.rs
html_to_pdf_adapter_dotnet_itext/: Cargo.toml  build.rs
html_to_pdf_adapter_dotnet_itext/HtmlToPdf/: HtmlToPdf.csproj  HtmlToPdf.sln  Program.cs
html_to_pdf_adapter_dotnet_itext/src/: lib.rs
html_to_pdf_adapter_pdf_min/: Cargo.toml
html_to_pdf_adapter_pdf_min/src/: lib.rs
html_to_pdf_adapter_weasy_print/: Cargo.toml
html_to_pdf_adapter_weasy_print/src/: lib.rs
html_to_pdf_adapter_wkhtml/wkhtml/: Cargo.toml  build.rs
html_to_pdf_adapter_wkhtml/wkhtml/src/: lib.rs
html_to_pdf_adapter_wkhtml/wkhtml_link/: Cargo.toml  Linking.txt  build.rs
html_to_pdf_adapter_wkhtml/wkhtml_link/src/: lib.rs
html_to_pdf_adapter_wkhtml/wkhtml_runner/: Cargo.toml
html_to_pdf_adapter_wkhtml/wkhtml_runner/src/: main.rs
