[package]
name = "wkhtml_link"
version.workspace = true
authors.workspace = true
edition = "2021"
build = "build.rs"
description = """
Interacts directly with the wkhtml c library.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

should_link = ["wkhtmltopdf"]
compression = ["include-flate"] # This should only be specified if the "should_link" feature isn't used. (Otherwise might increase compile times.)

[dependencies]
# Careful when updating this since it changes what version of wkhtml we need to dynamically link to:
wkhtmltopdf = {optional = true, version = "0.4.0" }

# Used to compress included dll file if `should_link` is false:
include-flate = {optional = true, version = "0.1.3", features = ["stable"] }

[build-dependencies]
sha2 = "0.10.8"
reqwest = { version = "0.12.9", features = ["blocking"] }
hex-literal = "0.4.1"